# gentoo

./: .gitignore  Cargo.toml  build.rs
shaders/: egui.frag  egui.vert  egui.vert.spv  point_light.frag  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.vert
src/: application.rs  camera.rs  frame_info.rs  game_object.rs  input.rs  keyboard_movement_controller.rs  main.rs  window.rs
src/vulkan/: buffer.rs  device.rs  game_object.rs  instance.rs  mod.rs  model.rs  queue.rs  renderer.rs  shader.rs  swapchain.rs
src/vulkan/descriptor_set/: layout.rs  pool.rs  writer.rs
src/vulkan/egui/: integration.rs
src/vulkan/pipeline/: cache.rs  mod.rs  pipeline.rs
src/vulkan/systems/: point_light_system.rs  simple_render_system.rs
